# MultilevelCacheSystem

./: .gitignore  CMakeLists.txt  main.cpp
cache_provider/: CacheProvider.hpp  ICacheProvider.hpp
eviction_policy/: EvictionPolicy.hpp  LRUEvictionPolicy.hpp
level_cache/: DefaultLevelCache.hpp  ILevelCache.hpp  NullLevelCache.hpp
models/: LevelCacheDataModel.hpp  ReadResponseModel.hpp  StatsResponseModel.hpp  WriteResponseModel.hpp
service/: CacheService.hpp
storage/: Exceptions.hpp  MapStorage.hpp  Storage.hpp
utility/: DoublyLinkedList.hpp  DoublyLinkedListNode.hpp
